--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="address2">Mountain View, CA 94043</string>
     <string name="phone">650-555-5555</string>
     <string name="website"> www.udacity.com</string>
+    <string name="promo">New Year, New Skills. Learn tomorrow\'s skills today.</string>
 </resources>
